Fix unit tests with Java 21 changes